syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto.booking";
option java_outer_classname = "BookingProto";

service BookingService {
    rpc CreateBooking (BookingDataMessage) returns (CrateBookingResponse) {}
}

message BookingDataMessage {
    int64 id = 1;
    int64 ad_id = 2;
    int64 property_id = 3;
    int64 landlord = 4;
    int64 tenant = 5;
}

message CrateBookingResponse {
    string return_message = 1;
}